# serializer version: 1
# name: test_ffprobe_file[10257640.mp4][10257640.mp4]
  dict({
    'format': dict({
      'bit_rate': '698381',
      'duration': 6.803333,
      'format_long_name': None,
      'format_name': 'mov,mp4,m4a,3gp,3g2,mj2',
      'nb_programs': 0,
      'nb_streams': 2,
      'probe_score': 100,
      'size': 593915,
      'start_time': 0.0,
      'tags': dict({
        'compatible_brands': 'isomavc1',
        'creation_time': '2009-09-26T03:39:34.000000Z',
        'major_brand': 'isom',
        'minor_version': '1',
      }),
    }),
    'streams': list([
      dict({
        'avg_frame_rate': '30000/1001',
        'bit_rate': '586903',
        'bits_per_raw_sample': '8',
        'chroma_location': 'left',
        'codec_long_name': 'unknown',
        'codec_name': 'h264',
        'codec_tag': '0x31637661',
        'codec_tag_string': 'avc1',
        'codec_time_base': '1001/60000',
        'codec_type': 'video',
        'coded_height': 480,
        'coded_width': 640,
        'display_aspect_ratio': '4:3',
        'disposition': dict({
          'attached_pic': 0,
          'clean_effects': 0,
          'comment': 0,
          'default': 1,
          'dub': 0,
          'forced': 0,
          'hearing_impaired': 0,
          'karaoke': 0,
          'lyrics': 0,
          'original': 0,
          'timed_thumbnails': 0,
          'visual_impaired': 0,
        }),
        'duration': '6.740067',
        'duration_ts': 202202,
        'has_b_frames': 1,
        'height': 480,
        'index': 0,
        'is_avc': 'true',
        'level': 31,
        'nal_length_size': '4',
        'nb_frames': '202',
        'pix_fmt': 'yuv420p',
        'profile': '100',
        'r_frame_rate': '30000/1001',
        'refs': 1,
        'sample_aspect_ratio': '1:1',
        'start_pts': 1001,
        'start_time': '0.033367',
        'tags': dict({
          'creation_time': '2009-09-26T03:39:34.000000Z',
          'handler_name': 'GPAC ISO Video Handler',
          'language': 'und',
          'rotate': 0,
        }),
        'time_base': '1/30000',
        'width': 640,
      }),
      dict({
        'avg_frame_rate': '0/0',
        'bit_rate': '112319',
        'bits_per_sample': 0,
        'channel_layout': 'stereo',
        'channels': 2,
        'codec_long_name': 'unknown',
        'codec_name': 'aac',
        'codec_tag': '0x6134706d',
        'codec_tag_string': 'mp4a',
        'codec_time_base': '1/44100',
        'codec_type': 'audio',
        'disposition': dict({
          'attached_pic': 0,
          'clean_effects': 0,
          'comment': 0,
          'default': 1,
          'dub': 0,
          'forced': 0,
          'hearing_impaired': 0,
          'karaoke': 0,
          'lyrics': 0,
          'original': 0,
          'timed_thumbnails': 0,
          'visual_impaired': 0,
        }),
        'duration': '6.803447',
        'duration_ts': 300032,
        'height': None,
        'index': 1,
        'max_bit_rate': '210624',
        'nb_frames': '293',
        'pix_fmt': None,
        'profile': '1',
        'r_frame_rate': '0/0',
        'sample_fmt': 'fltp',
        'sample_rate': '44100',
        'start_pts': 0,
        'start_time': '0.000000',
        'tags': dict({
          'creation_time': '2009-09-26T03:39:34.000000Z',
          'handler_name': 'GPAC ISO Audio Handler',
          'language': 'und',
          'rotate': 0,
        }),
        'time_base': '1/44100',
        'width': None,
      }),
    ]),
  })
# ---
# name: test_ffprobe_file[188794898-eeb81e4b-b33a-4bdf-85a8-3b4b8460b88a.png][188794898-eeb81e4b-b33a-4bdf-85a8-3b4b8460b88a.png]
  dict({
    'format': dict({
      'duration': None,
      'format_long_name': None,
      'format_name': 'png_pipe',
      'nb_programs': 0,
      'nb_streams': 1,
      'probe_score': 99,
      'size': 47210,
      'start_time': None,
    }),
    'streams': list([
      dict({
        'avg_frame_rate': '0/0',
        'codec_long_name': 'unknown',
        'codec_name': 'png',
        'codec_tag': '0x0000',
        'codec_tag_string': '[0][0][0][0]',
        'codec_time_base': '0/1',
        'codec_type': 'video',
        'coded_height': 259,
        'coded_width': 262,
        'color_range': 'pc',
        'disposition': dict({
          'attached_pic': 0,
          'clean_effects': 0,
          'comment': 0,
          'default': 0,
          'dub': 0,
          'forced': 0,
          'hearing_impaired': 0,
          'karaoke': 0,
          'lyrics': 0,
          'original': 0,
          'timed_thumbnails': 0,
          'visual_impaired': 0,
        }),
        'has_b_frames': 0,
        'height': 259,
        'index': 0,
        'level': -99,
        'pix_fmt': 'rgba',
        'profile': None,
        'r_frame_rate': '25/1',
        'refs': 1,
        'tags': dict({
          'rotate': 0,
        }),
        'time_base': '1/25',
        'width': 262,
      }),
    ]),
  })
# ---
# name: test_ffprobe_file[201432913186_fish.gif][201432913186_fish.gif]
  dict({
    'format': dict({
      'duration': None,
      'format_long_name': None,
      'format_name': 'gif',
      'nb_programs': 0,
      'nb_streams': 1,
      'probe_score': 100,
      'size': 30333,
      'start_time': None,
    }),
    'streams': list([
      dict({
        'avg_frame_rate': '10/1',
        'codec_long_name': 'unknown',
        'codec_name': 'gif',
        'codec_tag': '0x0000',
        'codec_tag_string': '[0][0][0][0]',
        'codec_time_base': '1/10',
        'codec_type': 'video',
        'coded_height': 360,
        'coded_width': 480,
        'disposition': dict({
          'attached_pic': 0,
          'clean_effects': 0,
          'comment': 0,
          'default': 0,
          'dub': 0,
          'forced': 0,
          'hearing_impaired': 0,
          'karaoke': 0,
          'lyrics': 0,
          'original': 0,
          'timed_thumbnails': 0,
          'visual_impaired': 0,
        }),
        'has_b_frames': 0,
        'height': 360,
        'index': 0,
        'level': -99,
        'pix_fmt': 'bgra',
        'profile': None,
        'r_frame_rate': '10/1',
        'refs': 1,
        'tags': dict({
          'rotate': 0,
        }),
        'time_base': '1/100',
        'width': 480,
      }),
    ]),
  })
# ---
# name: test_ffprobe_file[4ox1IBJxK3cVd0uJA6gOtceSP3g.jpg][4ox1IBJxK3cVd0uJA6gOtceSP3g.jpg]
  dict({
    'format': dict({
      'bit_rate': '249978400',
      'duration': 0.04,
      'format_long_name': None,
      'format_name': 'image2',
      'nb_programs': 0,
      'nb_streams': 1,
      'probe_score': 50,
      'size': 1249892,
      'start_time': 0.0,
    }),
    'streams': list([
      dict({
        'avg_frame_rate': '0/0',
        'bits_per_raw_sample': '8',
        'chroma_location': 'center',
        'codec_long_name': 'unknown',
        'codec_name': 'mjpeg',
        'codec_tag': '0x0000',
        'codec_tag_string': '[0][0][0][0]',
        'codec_time_base': '0/1',
        'codec_type': 'video',
        'coded_height': 836,
        'coded_width': 1254,
        'color_range': 'pc',
        'color_space': 'bt470bg',
        'display_aspect_ratio': '3:2',
        'disposition': dict({
          'attached_pic': 0,
          'clean_effects': 0,
          'comment': 0,
          'default': 0,
          'dub': 0,
          'forced': 0,
          'hearing_impaired': 0,
          'karaoke': 0,
          'lyrics': 0,
          'original': 0,
          'timed_thumbnails': 0,
          'visual_impaired': 0,
        }),
        'duration': '0.040000',
        'duration_ts': 1,
        'has_b_frames': 0,
        'height': 836,
        'index': 0,
        'level': -99,
        'pix_fmt': 'yuvj444p',
        'profile': '192',
        'r_frame_rate': '25/1',
        'refs': 1,
        'sample_aspect_ratio': '1:1',
        'start_pts': 0,
        'start_time': '0.000000',
        'tags': dict({
          'rotate': 0,
        }),
        'time_base': '1/25',
        'width': 1254,
      }),
    ]),
  })
# ---
# name: test_ffprobe_file[9b5174019e8c9bec190903528ff6d0392a2d6a9b.mp4][9b5174019e8c9bec190903528ff6d0392a2d6a9b.mp4]
  dict({
    'format': dict({
      'bit_rate': '1479557',
      'duration': 38.741,
      'format_long_name': None,
      'format_name': 'mov,mp4,m4a,3gp,3g2,mj2',
      'nb_programs': 0,
      'nb_streams': 1,
      'probe_score': 100,
      'size': 7164941,
      'start_time': 0.0,
      'tags': dict({
        'compatible_brands': 'isomiso2avc1mp41',
        'encoder': 'Lavf57.26.100',
        'major_brand': 'isom',
        'minor_version': '512',
      }),
    }),
    'streams': list([
      dict({
        'avg_frame_rate': '1199/50',
        'bit_rate': '1477078',
        'bits_per_raw_sample': '8',
        'chroma_location': 'left',
        'codec_long_name': 'unknown',
        'codec_name': 'h264',
        'codec_tag': '0x31637661',
        'codec_tag_string': 'avc1',
        'codec_time_base': '25/1199',
        'codec_type': 'video',
        'coded_height': 1088,
        'coded_width': 1920,
        'display_aspect_ratio': '16:9',
        'disposition': dict({
          'attached_pic': 0,
          'clean_effects': 0,
          'comment': 0,
          'default': 1,
          'dub': 0,
          'forced': 0,
          'hearing_impaired': 0,
          'karaoke': 0,
          'lyrics': 0,
          'original': 0,
          'timed_thumbnails': 0,
          'visual_impaired': 0,
        }),
        'duration': '38.740982',
        'duration_ts': 743207,
        'has_b_frames': 2,
        'height': 1080,
        'index': 0,
        'is_avc': 'true',
        'level': 40,
        'nal_length_size': '4',
        'nb_frames': '929',
        'pix_fmt': 'yuv420p',
        'profile': '100',
        'r_frame_rate': '1199/50',
        'refs': 1,
        'sample_aspect_ratio': '1:1',
        'start_pts': 0,
        'start_time': '0.000000',
        'tags': dict({
          'handler_name': 'VideoHandler',
          'language': 'eng',
          'rotate': 0,
        }),
        'time_base': '1/19184',
        'width': 1920,
      }),
    ]),
  })
# ---
# name: test_ffprobe_file[9c7ee468-24a3-4930-9832-73f0f6001ab1.webp][9c7ee468-24a3-4930-9832-73f0f6001ab1.webp]
  dict({
    'format': dict({
      'duration': None,
      'format_long_name': None,
      'format_name': 'webp_pipe',
      'nb_programs': 0,
      'nb_streams': 1,
      'probe_score': 99,
      'size': 55242,
      'start_time': None,
    }),
    'streams': list([
      dict({
        'avg_frame_rate': '0/0',
        'codec_long_name': 'unknown',
        'codec_name': 'webp',
        'codec_tag': '0x0000',
        'codec_tag_string': '[0][0][0][0]',
        'codec_time_base': '0/1',
        'codec_type': 'video',
        'coded_height': 787,
        'coded_width': 1920,
        'color_range': 'tv',
        'color_space': 'bt470bg',
        'disposition': dict({
          'attached_pic': 0,
          'clean_effects': 0,
          'comment': 0,
          'default': 0,
          'dub': 0,
          'forced': 0,
          'hearing_impaired': 0,
          'karaoke': 0,
          'lyrics': 0,
          'original': 0,
          'timed_thumbnails': 0,
          'visual_impaired': 0,
        }),
        'has_b_frames': 0,
        'height': 787,
        'index': 0,
        'level': -99,
        'pix_fmt': 'yuv420p',
        'profile': None,
        'r_frame_rate': '25/1',
        'refs': 1,
        'tags': dict({
          'rotate': 0,
        }),
        'time_base': '1/25',
        'width': 1920,
      }),
    ]),
  })
# ---
# name: test_ffprobe_file[Cle9pQ5.jpg][Cle9pQ5.jpg]
  dict({
    'format': dict({
      'bit_rate': '14594600',
      'duration': 0.04,
      'format_long_name': None,
      'format_name': 'image2',
      'nb_programs': 0,
      'nb_streams': 1,
      'probe_score': 50,
      'size': 72973,
      'start_time': 0.0,
    }),
    'streams': list([
      dict({
        'avg_frame_rate': '0/0',
        'bits_per_raw_sample': '8',
        'chroma_location': 'center',
        'codec_long_name': 'unknown',
        'codec_name': 'mjpeg',
        'codec_tag': '0x0000',
        'codec_tag_string': '[0][0][0][0]',
        'codec_time_base': '0/1',
        'codec_type': 'video',
        'coded_height': 668,
        'coded_width': 720,
        'color_range': 'pc',
        'color_space': 'bt470bg',
        'disposition': dict({
          'attached_pic': 0,
          'clean_effects': 0,
          'comment': 0,
          'default': 0,
          'dub': 0,
          'forced': 0,
          'hearing_impaired': 0,
          'karaoke': 0,
          'lyrics': 0,
          'original': 0,
          'timed_thumbnails': 0,
          'visual_impaired': 0,
        }),
        'duration': '0.040000',
        'duration_ts': 1,
        'has_b_frames': 0,
        'height': 668,
        'index': 0,
        'level': -99,
        'pix_fmt': 'yuvj420p',
        'profile': '194',
        'r_frame_rate': '25/1',
        'refs': 1,
        'start_pts': 0,
        'start_time': '0.000000',
        'tags': dict({
          'rotate': 0,
        }),
        'time_base': '1/25',
        'width': 720,
      }),
    ]),
  })
# ---
# name: test_ffprobe_file[SampleAudio_0.4mb.mp3][SampleAudio_0.4mb.mp3]
  dict({
    'format': dict({
      'bit_rate': '128002',
      'duration': 27.74475,
      'format_long_name': None,
      'format_name': 'mp3',
      'nb_programs': 0,
      'nb_streams': 1,
      'probe_score': 51,
      'size': 443926,
      'start_time': 0.0,
    }),
    'streams': list([
      dict({
        'avg_frame_rate': '0/0',
        'bit_rate': '128000',
        'bits_per_sample': 0,
        'channel_layout': 'stereo',
        'channels': 2,
        'codec_long_name': 'unknown',
        'codec_name': 'mp3',
        'codec_tag': '0x0000',
        'codec_tag_string': '[0][0][0][0]',
        'codec_time_base': '1/44100',
        'codec_type': 'audio',
        'disposition': dict({
          'attached_pic': 0,
          'clean_effects': 0,
          'comment': 0,
          'default': 0,
          'dub': 0,
          'forced': 0,
          'hearing_impaired': 0,
          'karaoke': 0,
          'lyrics': 0,
          'original': 0,
          'timed_thumbnails': 0,
          'visual_impaired': 0,
        }),
        'duration': '27.744750',
        'duration_ts': 391533912,
        'height': None,
        'index': 0,
        'pix_fmt': None,
        'profile': None,
        'r_frame_rate': '0/0',
        'sample_fmt': 'fltp',
        'sample_rate': '44100',
        'start_pts': 0,
        'start_time': '0.000000',
        'tags': dict({
          'rotate': 0,
        }),
        'time_base': '1/14112000',
        'width': None,
      }),
    ]),
  })
# ---
# name: test_ffprobe_file[SampleVideo_1280x720_1mb.mp4][SampleVideo_1280x720_1mb.mp4]
  dict({
    'format': dict({
      'bit_rate': '1589963',
      'duration': 5.312,
      'format_long_name': None,
      'format_name': 'mov,mp4,m4a,3gp,3g2,mj2',
      'nb_programs': 0,
      'nb_streams': 2,
      'probe_score': 100,
      'size': 1055736,
      'start_time': 0.0,
      'tags': dict({
        'compatible_brands': 'isomiso2avc1mp41',
        'creation_time': '1970-01-01T00:00:00.000000Z',
        'encoder': 'Lavf53.24.2',
        'major_brand': 'isom',
        'minor_version': '512',
      }),
    }),
    'streams': list([
      dict({
        'avg_frame_rate': '25/1',
        'bit_rate': '1205959',
        'bits_per_raw_sample': '8',
        'chroma_location': 'left',
        'codec_long_name': 'unknown',
        'codec_name': 'h264',
        'codec_tag': '0x31637661',
        'codec_tag_string': 'avc1',
        'codec_time_base': '1/50',
        'codec_type': 'video',
        'coded_height': 720,
        'coded_width': 1280,
        'display_aspect_ratio': '16:9',
        'disposition': dict({
          'attached_pic': 0,
          'clean_effects': 0,
          'comment': 0,
          'default': 1,
          'dub': 0,
          'forced': 0,
          'hearing_impaired': 0,
          'karaoke': 0,
          'lyrics': 0,
          'original': 0,
          'timed_thumbnails': 0,
          'visual_impaired': 0,
        }),
        'duration': '5.280000',
        'duration_ts': 67584,
        'has_b_frames': 0,
        'height': 720,
        'index': 0,
        'is_avc': 'true',
        'level': 31,
        'nal_length_size': '4',
        'nb_frames': '132',
        'pix_fmt': 'yuv420p',
        'profile': '77',
        'r_frame_rate': '25/1',
        'refs': 1,
        'sample_aspect_ratio': '1:1',
        'start_pts': 0,
        'start_time': '0.000000',
        'tags': dict({
          'creation_time': '1970-01-01T00:00:00.000000Z',
          'handler_name': 'VideoHandler',
          'language': 'und',
          'rotate': 0,
        }),
        'time_base': '1/12800',
        'width': 1280,
      }),
      dict({
        'avg_frame_rate': '0/0',
        'bit_rate': '384828',
        'bits_per_sample': 0,
        'channel_layout': '5.1',
        'channels': 6,
        'codec_long_name': 'unknown',
        'codec_name': 'aac',
        'codec_tag': '0x6134706d',
        'codec_tag_string': 'mp4a',
        'codec_time_base': '1/48000',
        'codec_type': 'audio',
        'disposition': dict({
          'attached_pic': 0,
          'clean_effects': 0,
          'comment': 0,
          'default': 1,
          'dub': 0,
          'forced': 0,
          'hearing_impaired': 0,
          'karaoke': 0,
          'lyrics': 0,
          'original': 0,
          'timed_thumbnails': 0,
          'visual_impaired': 0,
        }),
        'duration': '5.312000',
        'duration_ts': 254976,
        'height': None,
        'index': 1,
        'max_bit_rate': '400392',
        'nb_frames': '249',
        'pix_fmt': None,
        'profile': '1',
        'r_frame_rate': '0/0',
        'sample_fmt': 'fltp',
        'sample_rate': '48000',
        'start_pts': 0,
        'start_time': '0.000000',
        'tags': dict({
          'creation_time': '1970-01-01T00:00:00.000000Z',
          'handler_name': 'SoundHandler',
          'language': 'und',
          'rotate': 0,
        }),
        'time_base': '1/48000',
        'width': None,
      }),
    ]),
  })
# ---
# name: test_ffprobe_file[cd89b1bf161582d55161f5ba94d03cc7728825c2.jpe][cd89b1bf161582d55161f5ba94d03cc7728825c2.jpe]
  dict({
    'format': dict({
      'duration': None,
      'format_long_name': None,
      'format_name': 'jpeg_pipe',
      'nb_programs': 0,
      'nb_streams': 1,
      'probe_score': 25,
      'size': 12642182,
      'start_time': None,
    }),
    'streams': list([
      dict({
        'avg_frame_rate': '0/0',
        'bits_per_raw_sample': '8',
        'chroma_location': 'center',
        'codec_long_name': 'unknown',
        'codec_name': 'mjpeg',
        'codec_tag': '0x0000',
        'codec_tag_string': '[0][0][0][0]',
        'codec_time_base': '0/1',
        'codec_type': 'video',
        'coded_height': 3144,
        'coded_width': 4716,
        'color_range': 'pc',
        'color_space': 'bt470bg',
        'display_aspect_ratio': '3:2',
        'disposition': dict({
          'attached_pic': 0,
          'clean_effects': 0,
          'comment': 0,
          'default': 0,
          'dub': 0,
          'forced': 0,
          'hearing_impaired': 0,
          'karaoke': 0,
          'lyrics': 0,
          'original': 0,
          'timed_thumbnails': 0,
          'visual_impaired': 0,
        }),
        'has_b_frames': 0,
        'height': 3144,
        'index': 0,
        'level': -99,
        'pix_fmt': 'yuvj444p',
        'profile': '192',
        'r_frame_rate': '25/1',
        'refs': 1,
        'sample_aspect_ratio': '1:1',
        'tags': dict({
          'rotate': 0,
        }),
        'time_base': '1/25',
        'width': 4716,
      }),
    ]),
  })
# ---
# name: test_ffprobe_file[maxresdefault.jpg-sdafdeagwdsadf][maxresdefault.jpg-sdafdeagwdsadf]
  dict({
    'format': dict({
      'duration': None,
      'format_long_name': None,
      'format_name': 'jpeg_pipe',
      'nb_programs': 0,
      'nb_streams': 1,
      'probe_score': 51,
      'size': 99802,
      'start_time': None,
    }),
    'streams': list([
      dict({
        'avg_frame_rate': '0/0',
        'bits_per_raw_sample': '8',
        'chroma_location': 'center',
        'codec_long_name': 'unknown',
        'codec_name': 'mjpeg',
        'codec_tag': '0x0000',
        'codec_tag_string': '[0][0][0][0]',
        'codec_time_base': '0/1',
        'codec_type': 'video',
        'coded_height': 720,
        'coded_width': 1280,
        'color_range': 'pc',
        'color_space': 'bt470bg',
        'disposition': dict({
          'attached_pic': 0,
          'clean_effects': 0,
          'comment': 0,
          'default': 0,
          'dub': 0,
          'forced': 0,
          'hearing_impaired': 0,
          'karaoke': 0,
          'lyrics': 0,
          'original': 0,
          'timed_thumbnails': 0,
          'visual_impaired': 0,
        }),
        'has_b_frames': 0,
        'height': 720,
        'index': 0,
        'level': -99,
        'pix_fmt': 'yuvj420p',
        'profile': '192',
        'r_frame_rate': '25/1',
        'refs': 1,
        'tags': dict({
          'rotate': 0,
        }),
        'time_base': '1/25',
        'width': 1280,
      }),
    ]),
  })
# ---
# name: test_ffprobe_file[overlay.png][overlay.png]
  dict({
    'format': dict({
      'duration': None,
      'format_long_name': None,
      'format_name': 'png_pipe',
      'nb_programs': 0,
      'nb_streams': 1,
      'probe_score': 99,
      'size': 2212,
      'start_time': None,
    }),
    'streams': list([
      dict({
        'avg_frame_rate': '0/0',
        'codec_long_name': 'unknown',
        'codec_name': 'png',
        'codec_tag': '0x0000',
        'codec_tag_string': '[0][0][0][0]',
        'codec_time_base': '0/1',
        'codec_type': 'video',
        'coded_height': 117,
        'coded_width': 163,
        'color_range': 'pc',
        'disposition': dict({
          'attached_pic': 0,
          'clean_effects': 0,
          'comment': 0,
          'default': 0,
          'dub': 0,
          'forced': 0,
          'hearing_impaired': 0,
          'karaoke': 0,
          'lyrics': 0,
          'original': 0,
          'timed_thumbnails': 0,
          'visual_impaired': 0,
        }),
        'has_b_frames': 0,
        'height': 117,
        'index': 0,
        'level': -99,
        'pix_fmt': 'pal8',
        'profile': None,
        'r_frame_rate': '25/1',
        'refs': 1,
        'tags': dict({
          'rotate': 0,
        }),
        'time_base': '1/25',
        'width': 163,
      }),
    ]),
  })
# ---
# name: test_ffprobe_file[silent_video.mp4][silent_video.mp4]
  dict({
    'format': dict({
      'bit_rate': '16965423',
      'duration': 6.965,
      'format_long_name': None,
      'format_name': 'mov,mp4,m4a,3gp,3g2,mj2',
      'nb_programs': 0,
      'nb_streams': 1,
      'probe_score': 100,
      'size': 14770522,
      'start_time': 0.0,
      'tags': dict({
        'compatible_brands': 'isomavc1mp42',
        'creation_time': '2015-03-11T14:16:58.000000Z',
        'major_brand': 'isom',
        'minor_version': '1',
      }),
    }),
    'streams': list([
      dict({
        'avg_frame_rate': '24000/1001',
        'bit_rate': '16962984',
        'bits_per_raw_sample': '8',
        'chroma_location': 'left',
        'codec_long_name': 'unknown',
        'codec_name': 'h264',
        'codec_tag': '0x31637661',
        'codec_tag_string': 'avc1',
        'codec_time_base': '1001/48000',
        'codec_type': 'video',
        'coded_height': 1088,
        'coded_width': 1920,
        'display_aspect_ratio': '16:9',
        'disposition': dict({
          'attached_pic': 0,
          'clean_effects': 0,
          'comment': 0,
          'default': 1,
          'dub': 0,
          'forced': 0,
          'hearing_impaired': 0,
          'karaoke': 0,
          'lyrics': 0,
          'original': 0,
          'timed_thumbnails': 0,
          'visual_impaired': 0,
        }),
        'duration': '6.965292',
        'duration_ts': 167167,
        'has_b_frames': 0,
        'height': 1080,
        'index': 0,
        'is_avc': 'true',
        'level': 40,
        'nal_length_size': '4',
        'nb_frames': '167',
        'pix_fmt': 'yuv420p',
        'profile': '578',
        'r_frame_rate': '24000/1001',
        'refs': 1,
        'sample_aspect_ratio': '1:1',
        'start_pts': 0,
        'start_time': '0.000000',
        'tags': dict({
          'creation_time': '2015-03-11T14:16:56.000000Z',
          'handler_name': 'GPAC ISO Video Handler',
          'language': 'und',
          'rotate': 0,
        }),
        'time_base': '1/24000',
        'width': 1920,
      }),
    ]),
  })
# ---
